{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 56,
  "lineage": "a16356cb-8020-37db-64e8-1c7e62f13192",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs_load_balancer",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs_target_group",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d47e17067c1e6fff",
            "owner_id": "895352585421",
            "tags": {
              "Name": "ECS IGW"
            },
            "vpc_id": "vpc-0f2c0f09da264a929"
          },
          "depends_on": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05039534e056c92f9",
            "owner_id": "895352585421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d47e17067c1e6fff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ECS Route Table"
            },
            "vpc_id": "vpc-0f2c0f09da264a929"
          },
          "depends_on": [
            "aws_internet_gateway.ecs-gw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs-rt-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f55b3ab9ca1da00",
            "route_table_id": "rtb-05039534e056c92f9",
            "subnet_id": "subnet-0879f47d60fb8f756"
          },
          "depends_on": [
            "aws_route_table.ecs_route_table",
            "aws_subnet.ecs_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea0d2d5b45da30d4",
            "route_table_id": "rtb-05039534e056c92f9",
            "subnet_id": "subnet-02d0d5cdafbbe8367"
          },
          "depends_on": [
            "aws_route_table.ecs_route_table",
            "aws_subnet.ecs_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032dc89d200c96c06",
            "route_table_id": "rtb-05039534e056c92f9",
            "subnet_id": "subnet-0cd650e5602d9819b"
          },
          "depends_on": [
            "aws_route_table.ecs_route_table",
            "aws_subnet.ecs_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:security-group/sg-089dd335ed3ebf2f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089dd335ed3ebf2f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ecs_security_group",
            "name_prefix": null,
            "owner_id": "895352585421",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f2c0f09da264a929"
          },
          "depends_on": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-0879f47d60fb8f756",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.100.1.0/24",
            "id": "subnet-0879f47d60fb8f756",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "ecs_subnet-1"
            },
            "vpc_id": "vpc-0f2c0f09da264a929"
          },
          "depends_on": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-02d0d5cdafbbe8367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.100.2.0/24",
            "id": "subnet-02d0d5cdafbbe8367",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "ecs_subnet-2"
            },
            "vpc_id": "vpc-0f2c0f09da264a929"
          },
          "depends_on": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-0cd650e5602d9819b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.100.3.0/24",
            "id": "subnet-0cd650e5602d9819b",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "ecs_subnet-3"
            },
            "vpc_id": "vpc-0f2c0f09da264a929"
          },
          "depends_on": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:vpc/vpc-0f2c0f09da264a929",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0eed732861c7d7d4a",
            "default_route_table_id": "rtb-0737a809e264dc68d",
            "default_security_group_id": "sg-060588511ceca70eb",
            "dhcp_options_id": "dopt-ce1e70a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f2c0f09da264a929",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0737a809e264dc68d",
            "owner_id": "895352585421",
            "tags": {
              "Name": "ECS VPC"
            }
          }
        }
      ]
    }
  ]
}